fix goki wallet connect behind buy/sell dialog

--- a/src/App.less
+++ b/src/App.less
@@ -1,5 +1,5 @@
-@import "./fonts.less";
+@import './fonts.less';
 
 [data-reach-dialog-overlay] {
-    z-index: 1000 !important;
+  z-index: 2000 !important;
 }
